re PR bootstrap/49344 (ICE in tree-flow-inline.h:745 while bootstrap)

2011-06-10  Richard Guenther  <rguenther@suse.de>

	PR bootstrap/49344
	* tree-ssa-math-opts.c (convert_mult_to_fma): Use
	FOR_EACH_PHI_OR_STMT_USE.

From-SVN: r174902